--- a/Bank_data_analysis/EDA_banking_data.ipynb
+++ b/Bank_data_analysis/EDA_banking_data.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Expolring dataset "
+    "## Exploring dataset "
    ]
   },
   {
