--- a/Data_cleaning_and_transformation/prac_1/data_cleaning_prac1.ipynb
+++ b/Data_cleaning_and_transformation/prac_1/data_cleaning_prac1.ipynb
@@ -2009,7 +2009,8 @@
     }
    ],
    "source": [
-    "pd.merge(left=name_dataframe, right=no_name_dataframe, how=\"inner\", on=\"Iteration\")"
+    "output = pd.merge(left=name_dataframe, right=no_name_dataframe, how=\"inner\", on=\"Iteration\")\n",
+    "output"
    ]
   },
   {
@@ -2017,7 +2018,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output.to_csv(\"cleaned_data.csv\")"
+   ]
   }
  ],
  "metadata": {
