--- a/Stock_prices_analysis.ipynb
+++ b/Stock_prices_analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8e6c32d3",
+   "metadata": {},
+   "source": [
+    "## The Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "03a2614f",
@@ -13,6 +21,14 @@
     "import numpy as np\n",
     "import datetime\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adae2768",
+   "metadata": {},
+   "source": [
+    "## Data"
    ]
   },
   {
@@ -351,6 +367,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a1afe02",
+   "metadata": {},
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "f715e1b9",
@@ -664,6 +688,14 @@
    ],
    "source": [
     "sns.distplot(returns.loc['2020-01-01':'2020-12-31']['NVDA Return'],color='green',bins=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f7ac267",
+   "metadata": {},
+   "source": [
+    "## More visualizations"
    ]
   },
   {
