--- a/Stock_prices_analysis.ipynb
+++ b/Stock_prices_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8e6c32d3",
+   "id": "f610c33a",
    "metadata": {},
    "source": [
     "## The Imports"
@@ -25,10 +25,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adae2768",
+   "id": "8c4489e1",
    "metadata": {},
    "source": [
-    "## Data"
+    "## Get the Data"
    ]
   },
   {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a1afe02",
+   "id": "07ae8279",
    "metadata": {},
    "source": [
     "## EDA"
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f7ac267",
+   "id": "ba1d1187",
    "metadata": {},
    "source": [
     "## More visualizations"
@@ -30244,6 +30244,14 @@
     "Amazon['Close'].loc['2020-01-01':'2020-12-31'].plot(label='AMZN CLOSE')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18cadec1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
